force-app/main/default/objects/House__c/fields/Convert__c.field-meta.xml
<CustomField>
    <fullName>Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert</label>
    <type>Checkbox</type>
</CustomField>