force-app/main/default/objects/House__c/fields/House_Type__c.field-meta.xml
<CustomField>
    <fullName>House_Type__c</fullName>
    <defaultValue>&quot;none&quot;</defaultValue>
    <label>House Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Terrace</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>