force-app/main/default/objects/House__c/fields/Individual_Number__c.field-meta.xml
<CustomField>
    <fullName>Individual_Number__c</fullName>
    <label>Individual Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>