force-app/main/default/objects/House__c/fields/Terrace_Number__c.field-meta.xml
<CustomField>
    <fullName>Terrace_Number__c</fullName>
    <label>Terrace Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>