force-app/main/default/objects/House__c/recordTypes/Flat.recordType-meta.xml
<RecordType>
    <fullName>Flat</fullName>
    <active>false</active>
    <label>Flat</label>
</RecordType>