force-app/main/default/objects/House__c/recordTypes/Flats.recordType-meta.xml
<RecordType>
    <fullName>Flats</fullName>
    <active>true</active>
    <label>Flats</label>
</RecordType>