force-app/main/default/objects/House__c/recordTypes/Terrace.recordType-meta.xml
<RecordType>
    <fullName>Terrace</fullName>
    <active>true</active>
    <label>Terrace</label>
</RecordType>