force-app/main/default/objects/House__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FLat_Number__c</columns>
    <columns>Terrace_Number__c</columns>
    <columns>Individual_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>